UtahLiveDataTest/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AssignedToEmailAddress__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedToLoggedInUserId__c</fullName>
        <formula>IF( GNT__GroupId__c == null &amp;&amp; $User.Id == OwnerId, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Logged In User Id?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedToUserType__c</fullName>
        <label>Assigned To User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomainURL__c</fullName>
        <formula>$Api.Enterprise_Server_URL_300</formula>
        <label>Domain URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueComingMonthsTasks__c</fullName>
        <formula>IF( (TODAY() &lt; GNT__ActivityDuplicateDate__c - 30)&amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;) &lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Coming Months Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueInSevenDaysTasks__c</fullName>
        <formula>IF( (TODAY() &gt; GNT__ActivityDuplicateDate__c - 7) &amp;&amp; (TODAY() &lt;= GNT__ActivityDuplicateDate__c ) &amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;) &lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In Seven Days Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueInThirtyDaysTasks__c</fullName>
        <formula>IF( ((TODAY() + 7) &gt;=  GNT__ActivityDuplicateDate__c - 30) &amp;&amp; (TODAY() + 7 &lt;= GNT__ActivityDuplicateDate__c ) &amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;) &lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In Thirty Days Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventRelationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventRelationId</label>
        <referenceTo>EventRelation__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventStatus__c</fullName>
        <description>Status of an Event</description>
        <label>EventStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__Action__c</fullName>
        <inlineHelpText>Holds the Actions that need to be taken on the Task for Assigned and Unassigned Tasks</inlineHelpText>
        <label>Description of Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review Announcement</fullName>
                </value>
                <value>
                    <fullName>Review Program</fullName>
                </value>
                <value>
                    <fullName>Review Funding Account</fullName>
                </value>
                <value>
                    <fullName>Review Funding Source</fullName>
                </value>
                <value>
                    <fullName>Review Submission Package</fullName>
                </value>
                <value>
                    <fullName>Review User</fullName>
                </value>
                <value>
                    <fullName>Review Application</fullName>
                </value>
                <value>
                    <fullName>Review Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Create Award</fullName>
                </value>
                <value>
                    <fullName>Review Organization</fullName>
                </value>
                <value>
                    <fullName>Review Award</fullName>
                </value>
                <value>
                    <fullName>Review Applications</fullName>
                </value>
                <value>
                    <fullName>Review Pre-Applications</fullName>
                </value>
                <value>
                    <fullName>Review Progress Report</fullName>
                </value>
                <value>
                    <fullName>Review Financial Report</fullName>
                </value>
                <value>
                    <fullName>Review Close Out Report</fullName>
                </value>
                <value>
                    <fullName>Submit Close Out Report</fullName>
                </value>
                <value>
                    <fullName>Submit Progress Report</fullName>
                </value>
                <value>
                    <fullName>Submit Financial Report</fullName>
                </value>
                <value>
                    <fullName>Submit Site Visit Report</fullName>
                </value>
                <value>
                    <fullName>Review Site Visit Report</fullName>
                </value>
                <value>
                    <fullName>Review Amendment Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__ActivityDuplicateDate__c</fullName>
        <inlineHelpText>Field contains the same value as Due Date of the Task. Before Insert and before Update Trigger on Task populates the value</inlineHelpText>
        <label>Activity Duplicate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GNT__AssignedToEmailAddress__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__AssignedToLoggedInUserId__c</fullName>
        <formula>IF( GNT__GroupId__c == null &amp;&amp; $User.Id ==  OwnerId, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Logged In User Id?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__AssignedToLoggedInUserProfile__c</fullName>
        <formula>IF($Profile.Name ==  GNT__GroupName__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Logged In User Profile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__AssignedToQueue__c</fullName>
        <formula>IF (GNT__GroupId__c == null, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__AssignedToUserType__c</fullName>
        <label>Assigned To User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__CCAddress__c</fullName>
        <label>CC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__CustomAppName__c</fullName>
        <description>Comma separated list of App Names associated with the Task Action</description>
        <inlineHelpText>Comma separated list of App Names associated with the Task Action</inlineHelpText>
        <label>Custom App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__DocumentType__c</fullName>
        <inlineHelpText>Name of the Object Type used in Assigned and Un-assigned Task like Announcement, Program Organization etc</inlineHelpText>
        <label>Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Announcement</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Funding Account</fullName>
                </value>
                <value>
                    <fullName>Funding Source</fullName>
                </value>
                <value>
                    <fullName>Submission Package</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Create Award</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Pre-Applications</fullName>
                </value>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Review Award</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__DomainURL__c</fullName>
        <formula>$Api.Enterprise_Server_URL_300</formula>
        <label>Domain URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__DueComingMonthsTasks__c</fullName>
        <formula>IF( (TODAY() &lt; GNT__ActivityDuplicateDate__c - 30)&amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;) &lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Coming Months Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__DueInSevenDaysTasks__c</fullName>
        <formula>IF( (TODAY() &gt; GNT__ActivityDuplicateDate__c - 7) &amp;&amp; (TODAY() &lt;= GNT__ActivityDuplicateDate__c ) &amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;) &lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In Seven Days Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__DueInThirtyDaysTasks__c</fullName>
        <formula>IF( ((TODAY() + 7) &gt;=  GNT__ActivityDuplicateDate__c - 30) &amp;&amp; (TODAY() + 7 &lt;= GNT__ActivityDuplicateDate__c ) &amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;) &lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due In Thirty Days Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__EmailType__c</fullName>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__FromAddress__c</fullName>
        <label>From Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GNT__GroupId__c</fullName>
        <description>Stores the Id the of the Group when a Task is assigned to a Group</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores the Id the of the Group when a Task is assigned to a Group</inlineHelpText>
        <label>Assigned To Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__GroupName__c</fullName>
        <inlineHelpText>Every Profile has a corresponding Group that has the same name. When a Task is created and if the Task is assigned to a Group, then this field should be populated with the Group Name that is similar to the Profile  Name</inlineHelpText>
        <label>Assigned To Group Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__InternalUniqueID__c</fullName>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <inlineHelpText>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</inlineHelpText>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__IsBatchProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used in back end for cleanup purpose</inlineHelpText>
        <label>Is Batch Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weather the email is read or not.</description>
        <label>Is Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__IsReassignmentInitiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set when the reassignment is initiated such that same tasks wont be send for Reassignment until the reassignment is not completed</description>
        <label>Is Reassignment Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__LateTasks__c</fullName>
        <formula>IF( (TODAY() &gt; ActivityDate) &amp;&amp; (ISPICKVAL(Status, &apos;Completed&apos;)&lt;&gt; TRUE ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__ObjectRelationName__c</fullName>
        <description>Name of the record used in Assigned and Un-assigned Tasks</description>
        <inlineHelpText>Name of the record used in Assigned and Un-assigned Tasks</inlineHelpText>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__OrganizationName__c</fullName>
        <inlineHelpText>The External Organization (Account) of the Application or Pre-Application associated with the Task</inlineHelpText>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__ParentOwnerID__c</fullName>
        <description>This is used for Task Reassignment functionality</description>
        <inlineHelpText>This is used for Task Reassignment functionality</inlineHelpText>
        <label>Parent Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__ParentRecordId__c</fullName>
        <formula>WhatId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__ParentTask__c</fullName>
        <label>Parent Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__PhaseName__c</fullName>
        <description>The name of the phase config associated with this task.</description>
        <inlineHelpText>The name of the phase config associated with this task.</inlineHelpText>
        <label>Phase Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__ReassignedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the old owner of the Task</description>
        <inlineHelpText>This field contains the old owner of the Task</inlineHelpText>
        <label>Reassigned From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GNT__ReceivedDate__c</fullName>
        <inlineHelpText>Application or Pre-Application Received Date</inlineHelpText>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GNT__ScheduleTitle__c</fullName>
        <description>This will store the Site Visit Title</description>
        <inlineHelpText>This will store the Site Visit Title</inlineHelpText>
        <label>Schedule Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__SentDate__c</fullName>
        <description>Email date</description>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GNT__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GNT__SubmissionTitle__c</fullName>
        <label>Submission Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__TaskAction__c</fullName>
        <inlineHelpText>Hold the Action Type of the Task like &apos;Approve Announcement&apos;</inlineHelpText>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__TaskConfigId__c</fullName>
        <label>Task Config Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__TaskConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Config: Task</label>
        <referenceTo>GNT__TaskConfig__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GNT__TaskScheduleDetailId__c</fullName>
        <description>This field will contain Task Schedule Detail record Id</description>
        <inlineHelpText>This field will contain Task Schedule Detail record Id</inlineHelpText>
        <label>Task Schedule Detail Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__ToAddress__c</fullName>
        <label>To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>On-Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GNT__Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the assigned user viewed this task from the flex table list view. This is applicable only for &quot;my tasks&quot; and not for &quot;group tasks&quot;</inlineHelpText>
        <label>Viewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GNT__WorkitemId__c</fullName>
        <inlineHelpText>Used to store the WorkItemId of the Approval Process that created the Task.</inlineHelpText>
        <label>Workitem Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideField__c</fullName>
        <formula>If(ISPICKVAL(EventStatus__c, &apos;Completed&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfApplicationInvitation__c</fullName>
        <formula>IF (GNT__TaskAction__c = &apos;Application Invitation&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfApplicationInvitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotApplicationInvitation__c</fullName>
        <formula>IF (GNT__TaskAction__c != &apos;Application Invitation&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfNotApplicationInvitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBatchProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used in back end for cleanup purpose</inlineHelpText>
        <label>Is Batch Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReassignmentInitiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReassignmentInitiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check wheather event is updated or not</description>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <inlineHelpText>The External Organization (Account) of the Application or Pre-Application associated with the Task</inlineHelpText>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedToTitle__c</fullName>
        <label>RelatedToTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewType__c</fullName>
        <label>Review Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumberLink1__c</fullName>
        <formula>IF(ISPICKVAL(GNT__Action__c, &apos;Approve Applications&apos;), GNT__ObjectRelationName__c , IF(ISPICKVAL(GNT__Action__c, &apos;Approve Pre-Applications&apos;), GNT__ObjectRelationName__c ,IF(GNT__TaskAction__c == &apos;Review Application&apos;, &apos;todo&apos; ,IF(GNT__TaskAction__c == &apos;Review Rejected Applications&apos;, &apos;todo&apos; ,IF(GNT__TaskAction__c == &apos;Approve Applications&apos;, &apos;todo&apos; , GNT__ObjectRelationName__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Number Link</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>GNT__CustomAppName__c</columns>
        <columns>GNT__PhaseName__c</columns>
        <columns>GNT__ActivityDuplicateDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>GranteeTasks</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <columns>GNT__CustomAppName__c</columns>
        <columns>GNT__PhaseName__c</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <label>Grantee Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>GNT__CustomAppName__c</columns>
        <columns>GNT__PhaseName__c</columns>
        <columns>GNT__ActivityDuplicateDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>